// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedSearchList render the SavedSearchList should render empty 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    aria-hidden="true"
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      class="fade Modal-nuree8-0 eNmkew in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-body"
          >
            <div
              class="search"
              style="margin-top: 15px;"
            >
              <form
                class="form-inline"
              >
                <div
                  class="form-group has-feedback"
                >
                  <input
                    autocomplete="off"
                    class="query form-control"
                    id="common-search-form-query-input"
                    placeholder="Enter search query..."
                    spellcheck="false"
                    style="width: auto;"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="Button__StyledButton-c9cbmb-0 hpBclA submit-button btn btn-default"
                    type="submit"
                  >
                    Search
                  </button>
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="Button__StyledButton-c9cbmb-0 hpBclA reset-button btn btn-default"
                    type="reset"
                  >
                    Reset
                  </button>
                </div>
              </form>
            </div>
            <div
              class="Alert__StyledAlert-sc-1yucn9g-0 gthrMV SavedSearchList__NoSavedSearches-sc-1r3qvm6-1 gmJDqJ alert alert-info"
              role="alert"
            >
              <svg
                class="svg-inline--fa fa-exclamation-triangle"
              />
              <span>
                No saved searches found.
              </span>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="Button__StyledButton-c9cbmb-0 hpBclA btn btn-default"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SavedSearchList render the SavedSearchList should render with views 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    aria-hidden="true"
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      class="fade Modal-nuree8-0 eNmkew in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-body"
          >
            <div
              class="search"
              style="margin-top: 15px;"
            >
              <form
                class="form-inline"
              >
                <div
                  class="form-group has-feedback"
                >
                  <input
                    autocomplete="off"
                    class="query form-control"
                    id="common-search-form-query-input"
                    placeholder="Enter search query..."
                    spellcheck="false"
                    style="width: auto;"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="Button__StyledButton-c9cbmb-0 hpBclA submit-button btn btn-default"
                    type="submit"
                  >
                    Search
                  </button>
                </div>
                <div
                  class="form-group"
                  style="margin-left: 5px;"
                >
                  <button
                    class="Button__StyledButton-c9cbmb-0 hpBclA reset-button btn btn-default"
                    type="reset"
                  >
                    Reset
                  </button>
                </div>
              </form>
            </div>
            <div
              class="form-inline page-size"
              style="float: right;"
            >
              <div
                class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
              >
                <label
                  class="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                  for="page-size"
                >
                  Show:
                </label>
                <span>
                  <select
                    class="FormControl-sc-1amoaox-0 hBmgnF form-control input-sm"
                    id="page-size"
                    label="Show:"
                    name="page-size"
                    placeholder=""
                    type="select"
                  >
                    <option
                      value="5"
                    >
                      5
                    </option>
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="15"
                    >
                      15
                    </option>
                  </select>
                  
                </span>
              </div>
            </div>
            <div
              class="list-group"
            >
              <button
                class="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 XtBNB list-group-item"
                type="button"
              >
                test-0
                <span>
                  <span
                    class="SavedSearchList__DeleteButton-sc-1r3qvm6-2 hOFiKI"
                  >
                    <svg
                      class="svg-inline--fa fa-trash-alt"
                      data-testid="delete-foo-bar-0"
                    />
                  </span>
                </span>
              </button>
            </div>
            <div
              class="text-center pagination-wrapper"
            />
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="Button__StyledButton-c9cbmb-0 hpBclA btn btn-default"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
